[package]
name = "path-permission"
version = "0.1.2"
authors = ["Jia Chao <jiachao2130@126.com>"]
edition = "2018"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/CC2130/path-permission"
keywords = ["path", "file", "permission", "chmod"]
include = ["src/**/*", "Cargo.toml", "README.md"]
description = "Rust Path trait to get the permission."

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
libc = "0.2.97"
